# portail-dcop-413

./: ANALYSE_VULNERABILITES_TECHNIQUES.md  ARCHITECTURE_DOCKER.md  AUDIT_CYBERSECURITE_COMPLET.md  COMMANDES_GITHUB_EXACTES.md  CONCEPT_APPLICATION_DETAILLE.md  Cargo.toml  FICHIERS_ESSENTIELS_REFERENCE.md  GUIDE_ADMINISTRATION_COMPLET.md  GUIDE_DEVELOPPEUR_FRONTEND.md  GUIDE_PACKAGING_PARTAGE.md  RAPPORT_CORRECTIONS_VULNERABILITES_FINAL.md  RAPPORT_CORRECTION_PROXY_REVERSE.md  RAPPORT_FINAL_MISSION_ACCOMPLIE_100.md  RAPPORT_NETTOYAGE_FINAL.md  RESUME_EXECUTIF_CYBERSECURITE.md  SECRETS_DEVELOPPEMENT.md  SECURITY_RECOMMENDATIONS.md  cleanup_final.sh  deep_security_line_scanner.sh  docker-compose.full.yml  final_security_corrections.sh  fix_all_critical_vulnerabilities.sh  fix_all_remaining_vulnerabilities.sh  fix_elevated_vulnerabilities_production.sh  fix_final_vulnerabilities.sh  fix_high_medium_vulnerabilities.sh  fix_line_scan_vulnerabilities.sh  fix_shell_variables_final.sh  generate_secure_secrets.sh  isolate_postgresql_final.sh  postgresql_ssl.conf  security_final_report.sh  security_vulnerability_scanner.sh  start_system.sh  validate_production_security.sh  validate_security_final.sh
portail_413/: .dockerignore  .env.dev  .env.development  .env.example  .gitignore  .pgpass  Cargo.toml  Dockerfile  Makefile  README.md  STRUCTURE.md  backup-db.sh  create_admin_user.sql  create_secure_users.sql  create_statistics_table.sql  create_test_admin.sh  create_users_template.sql  dcop_cron_jobs  demo_auth_system.sh  diagnostic_endpoints.sh  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.backup.20250820_173531  final_security_validation.sh  fix-endpoints.sh  fix-proxy.sh  fix_password_hashes.sql  health-check.sh  install-cron.sh  logrotate.conf  restart_clean.sh  run_security_tests.sh  security_analysis_expert.sh  security_final_checklist.sh  seed_test_data.sql  setup-cron.sh  setup-monitoring.sh  setup-ssl.sh  sqlx-data.json  test-proxy.sh  (+4 more)
portail_413/.sqlx/: query-002fc500e925819141344985523cfef6edd7b963540f4455556667ada2604146.json  query-04a9cbd8b9cc34977d5c348e4d2282cbca775d7f8a9cbc22a0f9404a6186532d.json  query-20ce3c7a4120ed047121b7aea66144d0cc443b93c9b7387612311459476fdc1b.json  query-241f3c379933bbde416d80f6bce7d4c51b8045072860f1f1d58cc61faf399105.json  query-25234f3fcf6440a8addb50caea83b05cbf256b69bbb66517645ed0197ce6608e.json  query-2806058514eaf93420fca0cab50a202688256fe193a777ef8fe5cd15994a8326.json  query-2d75ab91e054c8afbab6951b2d1d63e865d502371d75bf9892f6258146ddcf72.json  query-332f0338b0d89fcb0d04197a8dd5b368e066230b69be7eefeaf57fcefa14622f.json  query-3fd283f03bf91db6100a6617c3fe8fde1a1430df0da563fcb84b6757bb0365e7.json  query-40e9588552e83279a93bc25736db383140948758ad53151cf33ef3cc2de1bf65.json  query-41c081743ff76f1925b232a629d9babcea688a1eb0c0273f6cae39bb557ab468.json  query-4b7e5b9a0d60c39b635f79d9dec2da01ea583f676754e184a3501938b0343caf.json  query-4bcf24117009d26e3a80efced9c0b7d8201ac7f6c97351a788593b664cd2156b.json  query-51e4097ed9c6e4f9bf08c2e2577639ceaa7bf34d231c38f72134948f6aae7d77.json  query-538fcc59e0590320b478cc9d955a859eb56fa83f002da5afa2623fe41962a0d3.json  query-558d787a1f8d09e08ea9259ff7153b360179a35501407cab7a68f409cd99db40.json  query-599cd49e0adbc830cfa77482a2ab369b9fffddd87d1c7a319372ea894a0974d5.json  query-5a66e3537363177b2c1dba57072a4dc88fda0337f5b075fd1f4409fd9e64d040.json  query-5d045ea40b43779e0d08ec680c545efc9338b046c220fe1b530e788a90f3cef6.json  (+32 more)
portail_413/config/: pg_hba.conf  postgresql.conf
(+136 files in other folders)
