[package]
name = "portail_413"
version = "0.1.0"
edition = "2021"
description = "DCOP (413) - Portail des Visites - Système sécurisé de gestion des visiteurs"
authors = ["DCOP Team"]

# Configuration du binaire principal
[[bin]]
name = "portail_413"
path = "src/main.rs"

[dependencies]
# Core dependencies (latest stable versions)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
base64 = "0.22"
thiserror = "1.0"
urlencoding = "2.1"
lazy_static = "1.4"

# Web framework (latest Actix-Web 4.x)
actix-web = "4.9"
actix-files = "0.6"
actix-cors = "0.7"
actix-identity = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web-actors = "4.3"
actix-rt = "2.10"

# Async runtime (latest Tokio)
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-rustls = "0.25"

# Database (latest SQLx with enhanced security)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate", "bigdecimal", "ipnetwork", "time"], default-features = false }

argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# JWT and Authentication (latest with security improvements)
jsonwebtoken = "9.3"
cookie = { version = "0.18", features = ["secure", "signed"] }

# TLS and Certificates (latest Rustls)
rustls = "0.22"
rustls-pemfile = "2.1"
webpki-roots = "0.25"
x509-parser = "0.15"

# Network Security
trust-dns-resolver = "0.23"
ipnetwork = "0.20"
cidr = "0.2"

# Rate Limiting and DoS Protection
governor = "0.6"  # Advanced rate limiting
dashmap = "5.5"   # High-performance concurrent HashMap
tokio-util = "0.7" # Utilities for Tokio
fastrand = "2.1"  # Fast random number generation for jitter

# Monitoring and Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.23"
opentelemetry = "0.23"
metrics = "0.22"
metrics-exporter-prometheus = "0.15"

# Error handling and utilities
anyhow = "1.0"
eyre = "0.6"  # Enhanced error reporting
color-eyre = "0.6"  # Colored error reports
futures = "0.3"
futures-util = "0.3"
once_cell = "1.20"
parking_lot = "0.12"  # High-performance synchronization

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

# UUID and identifiers
uuid = { version = "1.10", features = ["v4", "v7", "serde", "fast-rng"] }
ulid = "1.1"  # Sortable UUIDs

# Configuration and environment
dotenvy = "0.15"
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# Data processing
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }

# Development and testing
mockall = "0.13"  # Mocking framework
fake = { version = "2.10", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"  # HTTP mocking

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }

# Pas de patch nécessaire - exclusion des features MySQL dans SQLx

# Features par défaut - exclusion des dépendances problématiques
[features]
default = []

# Configuration SQLx offline via feature
sqlx-offline = []
